--- a/src/pages/home-page/HomePage.css
+++ b/src/pages/home-page/HomePage.css
@@ -1,4 +1,4 @@
-
+//Homepage.css
 .scree-height {
     min-height: calc(100vh - 60px);
 }
@@ -33,6 +33,7 @@
     justify-content: flex-start; /* Changed to align buttons closer */
     padding: 3px;
     background-color: #ddd; /* Light grey background color */
+    margin-top: -12px;
 }
 
 .resource-tab, .create-or-edit-test, .saved-folders, .test-list{
